Update golangci.yml for golangci-lint v2

--- a/dot_config/golangci-lint/golangci.yml
+++ b/dot_config/golangci-lint/golangci.yml
@@ -1,14 +1,5 @@
 ---
+run:
+  relative-path-mode: gomod
 linters:
-  enable-all: true
-  disable:
-    - cyclop
-    - depguard
-    - execinquery
-    - exportloopref
-    - gci
-    - ginkgolinter
-    - godot
-    - gofumpt
-    - gomnd
-    - stylecheck
+  default: all
